# blip-cli

./: .gitattributes  .gitignore  README.md  blip_send.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
integrations/: README.md
integrations/codex/: README.md
integrations/codex/skills/blip-send/: SKILL.md
integrations/cursor/: README.md
integrations/cursor/rules/: blip-send.mdc
skills/blip-send/: SKILL.md
src/blip_cli/: __init__.py  cli.py  devices.py  macsend.py  platforms.py
src/zoop/: platforms.py
tests/: test_devices.py
